--- a/client/src/Styles/partials/_variables.scss
+++ b/client/src/Styles/partials/_variables.scss
@@ -18,13 +18,58 @@ $green: #158463; //in-stock label
 $red: #c94515; //out of stock label, error states, & delete icon
 
 //padding 
-$pad80: 80px; 
-$pad64: 64px;
-$pad56: 56px;
-$pad48: 48px;
-$pad40: 40px;
-$pad32: 32px;
-$pad24: 24px;
-$pad16: 16px;
-$pad8: 8px;
-$pad4: 4px;
+$pad80: 5rem; 
+$pad64: 4rem;
+$pad56: 3.5rem;
+$pad48: 3rem;
+$pad40: 2.5rem;
+$pad32: 2rem;
+$pad24: 1.5rem;
+$pad16: 1rem;
+$pad8: .5rem;
+$pad4: .25rem;
+
+//Text Styles
+//header
+$m-h1-hr-font: 1.75rem;
+$m-h1-hr-lineh: 2.25rem;
+//subheader
+$m-h2-subhr-font: 1.25rem;
+$m-h2-subhr-lineh: 1.75rem;
+//labels, links, buttons
+$m-h3-lablinkbtns-font: .813rem;
+$m-h3-lablinkbtns-lineh: 1.25rem;
+//tablet headear
+$m-h4-tablehr-font: .688rem;
+$m-h4-tablehr-lineh: 1rem;
+//body large
+$m-p1-bodylg-font: .938rem;
+$m-p1-bodylg-line: 1.625rem;
+//body medium
+$m-p2-bodymed-font: 0.813rem;
+$m-p2-bodymed-lineh: 1.25rem;
+//bodu small
+$m-p3-bodysm-font: 0.688rem;
+$m-p3-bodysm-lineh: 1rem;
+
+//header
+$dk-h1-hr-font: 2rem;
+$dk-h1-hr-lineh: 2.5rem;
+//subheader
+$dk-h2-subhr-font: 1.5rem; 
+$dk-h2-subhr-lineh: 2rem; 
+//labels, links, buttons
+$dk-h3-lablinkbtns-font: .875rem; 
+$dk-h3-lablinkbtns-lineh: 1.375rem; 
+//tablet header
+$dk-h4-tablehr-font: 0.75rem; 
+$dk-h4-tablehr-lineh: 1.125rem; 
+//parargrapyh body large
+$dk-p1-bodylg-font: 1rem; 
+$dk-p1-bodylg-lineh: 1.75rem; 
+//paragraph body medium 
+$dk-p2-bodymed-font: 0.875rem; 
+$dk-p2-bodymed-lineh: 1.375rem; 
+//paragraphy body small
+$dk-p3-bodysm-font: 0.75rem; 
+$dk-p3-bodysm-lineh: 1.125rem; 
