--- a/client/src/Styles/partials/_variables.scss
+++ b/client/src/Styles/partials/_variables.scss
@@ -44,7 +44,7 @@ $m-h4-tablehr-font: .688rem;
 $m-h4-tablehr-lineh: 1rem;
 //body large
 $m-p1-bodylg-font: .938rem;
-$m-p1-bodylg-line: 1.625rem;
+$m-p1-bodylg-lineh: 1.625rem;
 //body medium
 $m-p2-bodymed-font: 0.813rem;
 $m-p2-bodymed-lineh: 1.25rem;
