--- a/client/src/pages/AddWarehouse/addWarehouse.scss
+++ b/client/src/pages/AddWarehouse/addWarehouse.scss
@@ -1,13 +1,18 @@
 @import "../../Styles/partials/mixins";
 @import "../../Styles/partials/variables";
 @import "../../Styles//partials/typography";
-
+body {
+    font-family: 'Titillium Web';
+    margin: 0;
+    color: $instock-black;
+    background-color: $light-grey;
+}
 .add-warehouse {
   @include resets;
   display: flex;
   flex-direction: column;
-  background-color: $light-grey;
   margin: 1rem;
+  background-color: $white;
   &__title {
     font-family: "Titillium Web";
     margin: 0 0 0 1rem;
@@ -26,6 +31,7 @@
       margin: 1rem 0 0.25rem 1rem;
     }
     &--input {
+      border-style: solid;
       border-radius: 20px;
       border-color: $cloud;
       padding: 1rem;
