--- a/client/src/Styles/partials/_variables.scss
+++ b/client/src/Styles/partials/_variables.scss
@@ -31,45 +31,45 @@ $pad4: .25rem;
 
 //Text Styles
 //header
-$m-h1-hr-font: 1.75rem;
-$m-h1-hr-lineh: 2.25rem;
+$mobile-h1-header-font: 1.75rem;
+$mobile-h1-header-lineh: 2.25rem;
 //subheader
-$m-h2-subhr-font: 1.25rem;
-$m-h2-subhr-lineh: 1.75rem;
+$mobile-h2-subheader-font: 1.25rem;
+$mobile-h2-subheader-lineh: 1.75rem;
 //labels, links, buttons
-$m-h3-lablinkbtns-font: .813rem;
-$m-h3-lablinkbtns-lineh: 1.25rem;
+$mobile-h3-lablinkbtns-font: .813rem;
+$mobile-h3-lablinkbtns-lineh: 1.25rem;
 //tablet headear
-$m-h4-tablehr-font: .688rem;
-$m-h4-tablehr-lineh: 1rem;
+$mobile-h4-tableheader-font: .688rem;
+$mobile-h4-tableheader-lineh: 1rem;
 //body large
-$m-p1-bodylg-font: .938rem;
-$m-p1-bodylg-lineh: 1.625rem;
+$mobile-p1-bodylarge-font: .938rem;
+$mobile-p1-bodylarge-lineh: 1.625rem;
 //body medium
-$m-p2-bodymed-font: 0.813rem;
-$m-p2-bodymed-lineh: 1.25rem;
+$mobile-p2-bodymedium-font: 0.813rem;
+$mobile-p2-bodymedium-lineh: 1.25rem;
 //bodu small
-$m-p3-bodysm-font: 0.688rem;
-$m-p3-bodysm-lineh: 1rem;
+$mobile-p3-bodysmall-font: 0.688rem;
+$mobile-p3-bodysmall-lineh: 1rem;
 
 //header
-$dk-h1-hr-font: 2rem;
-$dk-h1-hr-lineh: 2.5rem;
+$desktop-h1-header-font: 2rem;
+$desktop-h1-header-lineh: 2.5rem;
 //subheader
-$dk-h2-subhr-font: 1.5rem; 
-$dk-h2-subhr-lineh: 2rem; 
+$desktop-h2-subheader-font: 1.5rem; 
+$desktop-h2-subheader-lineh: 2rem; 
 //labels, links, buttons
-$dk-h3-lablinkbtns-font: .875rem; 
-$dk-h3-lablinkbtns-lineh: 1.375rem; 
+$desktop-h3-lablinkbtns-font: .875rem; 
+$desktop-h3-lablinkbtns-lineh: 1.375rem; 
 //tablet header
-$dk-h4-tablehr-font: 0.75rem; 
-$dk-h4-tablehr-lineh: 1.125rem; 
+$desktop-h4-tableheader-font: 0.75rem; 
+$desktop-h4-tableheader-lineh: 1.125rem; 
 //parargrapyh body large
-$dk-p1-bodylg-font: 1rem; 
-$dk-p1-bodylg-lineh: 1.75rem; 
+$desktop-p1-bodylarge-font: 1rem; 
+$desktop-p1-bodylarge-lineh: 1.75rem; 
 //paragraph body medium 
-$dk-p2-bodymed-font: 0.875rem; 
-$dk-p2-bodymed-lineh: 1.375rem; 
+$desktop-p2-bodymedium-font: 0.875rem; 
+$desktop-p2-bodymedium-lineh: 1.375rem; 
 //paragraphy body small
-$dk-p3-bodysm-font: 0.75rem; 
-$dk-p3-bodysm-lineh: 1.125rem; 
+$desktop-p3-bodysmall-font: 0.75rem; 
+$desktop-p3-bodysmall-lineh: 1.125rem; 
