--- a/client/src/pages/AddWarehouse/addWarehouse.scss
+++ b/client/src/pages/AddWarehouse/addWarehouse.scss
@@ -27,9 +27,20 @@ body {
     padding-top: 1rem;
     border-top: 1px solid $cloud;
   }
+  &__box {
+    display: flex;
+    flex-direction: column;
+    @include tablet {
+      width: 50%;
+    }
+  }
   &__form {
     display: flex;
     flex-direction: column;
+    @include tablet {
+      display: flex;
+      flex-direction: row;
+    }
     &--label {
       font-family: "Titillium Web";
       margin: 1rem 0 0.25rem 1rem;
@@ -44,6 +55,10 @@ body {
     &--buttonbox {
       display: flex;
       justify-content: center;
+      background-color: $light-grey;
+      @include tablet {
+        justify-content: flex-end;
+      }
     }
     &--cancel {
       font-family: "Titillium Web";
@@ -54,6 +69,9 @@ body {
       width: 50%;
       margin: 1rem;
       background-color: $white;
+      @include tablet {
+        width: 15%;
+      }
     }
     &--button {
       border: none;
@@ -64,6 +82,9 @@ body {
       margin: 1rem;
       background-color: $instock-indigo;
       color: $white;
+      @include tablet {
+        width: 15%;
+      }
     }
     &--error {
       color: $red;
