--- a/client/src/pages/AddWarehouse/addWarehouse.scss
+++ b/client/src/pages/AddWarehouse/addWarehouse.scss
@@ -17,6 +17,8 @@ body {
   flex-direction: column;
   margin: 1rem;
   background-color: $white;
+  box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
+border-radius: 3px;
   &__title {
     font-family: "Titillium Web";
     margin: 0 0 0 1rem;
