--- a/client/src/Styles/partials/_mixins.scss
+++ b/client/src/Styles/partials/_mixins.scss
@@ -1,6 +1,19 @@
 @import './variables'; 
 @import './typography';
-
+@mixin resets {
+    *,
+    *:before,
+    *:after {
+      box-sizing: inherit;
+    }
+    
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+  }
 //breakpoints
 @mixin tablet {
     @media (min-width: $tablet-breakpoint) {
