--- a/client/src/pages/AddInventory/AddInventory.scss
+++ b/client/src/pages/AddInventory/AddInventory.scss
@@ -1,3 +1,174 @@
-@import '../../Styles/partials/variables';
-@import '../../Styles/partials/typography';
-@import '../../Styles/partials/mixins';
+@import "../../Styles/partials/mixins";
+@import "../../Styles/partials/variables";
+@import "../../Styles//partials/typography";
+
+body {
+  font-family: "Titillium Web";
+  margin: 0;
+  color: $instock-black;
+  background-color: $light-grey;
+}
+
+.add-inventory {
+  @include resets;
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+  background-color: $white;
+  box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
+  border-radius: 3px;
+  position: relative;
+  top: -3rem;
+  @include tablet {
+    margin: 2rem;
+    top: -8.5rem;
+  }
+  @include desktop {
+    margin: 2rem 8.125rem 2rem 8.125rem;
+  }
+}
+
+.head{
+  display: flex;
+  flex-direction: row;
+  height: 8rem;
+  border-bottom: 1px solid #BDC5D5;
+  &__arrow{
+    margin-left:1.75rem;
+    margin-right:0.5rem;
+    margin-bottom: 2.7rem;
+  }
+  &__title{
+    font-size: 1.75rem;
+  }
+}
+
+.option{
+  margin-left:1.5rem;
+  margin-right:1.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.details{
+  &__title{
+    font-size: 1.25rem;
+  }
+  &__item-name{
+    font-size: 0.8125rem;
+    font-weight: 600;
+  }
+  &__item-input{
+    width:18.4375rem;
+    height: 2.25rem;
+    border-radius: 20px;
+    border: 1px solid #BDC5D5;
+    margin-top: 0.25rem;
+    margin-bottom: 1rem;
+  }
+  &__description-name{
+    font-size: 0.8125rem;
+    font-weight: 600;
+  }
+  &__description-input{
+    width:18.4375rem;
+    height: 7.5rem;
+    border-radius: 20px;
+    border: 1px solid #BDC5D5;
+    margin-top: 0.25rem;
+    margin-bottom: 1rem;
+  }
+  &__category-name{
+    font-size: 0.8125rem;
+    font-weight: 600;
+  }
+  &__category-input{
+    background-image: url('http://localhost:8080/Assets/Icons/arrow_drop_down-24px.svg');
+    background-repeat: no-repeat;
+    background-position: top 50% right 5%;
+    width:18.4375rem;
+    height: 2.25rem;
+    border-radius: 20px;
+    border: 1px solid #BDC5D5;
+    margin-top: 0.25rem;
+    margin-bottom: 1rem;
+  }
+}
+
+.ava{
+  &__title{
+    font-size: 1.25rem;
+  }
+  &__status{
+    font-size: 0.8125rem;
+    margin-bottom: 0.25rem;
+  }
+  &__stockflex{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 0.8125rem;
+    margin-left: 0;
+    margin-right: 2rem;
+    margin-bottom: 1rem;
+  }
+  &__house-qty{
+    font-size: 0.8125rem;
+    font-weight: 600;
+  }
+  &__house-num{
+    width:18.4375rem;
+    height: 2.25rem;
+    border-radius: 20px;
+    border: 1px solid #BDC5D5;
+    margin-top: 0.25rem;
+    margin-bottom: 1rem;
+  }
+  &__house-title{
+    font-size: 0.8125rem;
+    font-weight: 600;
+  }
+  &__house-dropdown{
+    background-image: url('http://localhost:8080/Assets/Icons/arrow_drop_down-24px.svg');
+    background-repeat: no-repeat;
+    background-position: top 50% right 5%;
+    width:18.4375rem;
+    height: 2.25rem;
+    border-radius: 20px;
+    border: 1px solid #BDC5D5;
+    margin-top: 0.25rem;
+    margin-bottom: 1rem;
+  }
+}
+
+.button{
+  padding-left:1.5rem;
+  padding-right:1.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  background-color: #F7F8F9;
+  &__cancel{
+    width: 8.68rem;
+    height: 2.25rem;
+    border-radius: 20px;
+    background-color:white;
+    border: 1px solid #BDC5D5;
+    margin-right: 1rem;
+    margin-top:1rem;
+    margin-bottom: 1rem;
+    color:#5C667E;
+  }
+  &__add{
+    width: 8.68rem;
+    height: 2.25rem;
+    border-radius: 20px;
+    background-color: #2E66E5;
+    color: white;
+    font-size: 600;
+    border: 1px solid #2E66E5;
+    margin-top:1rem;
+    margin-bottom: 1rem;
+  }
+}
