--- a/client/src/Styles/partials/_mixins.scss
+++ b/client/src/Styles/partials/_mixins.scss
@@ -52,8 +52,8 @@
     font-weight: 600;
 }
 @mixin mobile-h3-labels-links-btns{
-    font-size: $m-h3-lablinkbtns-font;
-    line-height: $m-h3-lablinkbtns-lineh;
+    font-size: $mobile-h3-lablinkbtns-font;
+    line-height: $mobile-h3-lablinkbtns-lineh;
     font-weight: 600;
 }
 @mixin mobile-h4-table-header{
@@ -136,4 +136,16 @@
 }
 @mixin outofstock {
     color: $red;
+}
+
+// element styles
+@mixin button {
+    @include mobile-h3-labels-links-btns;
+    background-color: $instock-indigo;
+    color: $white;
+    border-radius: 1.25rem;
+    height: 2.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
