--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -5,6 +5,8 @@
 
 *, *::before, *::after {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 body {
     font-family: 'Titillium Web';
