font-end styling

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,13 +2,13 @@
 @import './Styles/partials/typography';
 @import './Styles/partials/mixins';
 
-
 *, *::before, *::after {
     box-sizing: border-box;
 }
 body {
     font-family: 'Titillium Web';
     margin: 0;
+    padding: 0;
     color: $instock-black;
     background-color: $light-grey;
 }
