--- a/client/src/Styles/partials/_mixins.scss
+++ b/client/src/Styles/partials/_mixins.scss
@@ -1,4 +1,8 @@
 @import './variables'; 
+@import './typography';
+@import './variables'; 
+
+
 @mixin resets {
     *,
     *:before,
@@ -52,14 +56,14 @@
     font-weight: 600;
 }
 @mixin mobile-h3-labels-links-btns{
-    font-size: $m-h3-lablinkbtns-font;
-    line-height: $m-h3-lablinkbtns-lineh;
+    font-size: $mobile-h3-lablinkbtns-font;
+    line-height: $mobile-h3-lablinkbtns-lineh;
     font-weight: 600;
 }
 @mixin mobile-h4-table-header{
     font-size: $mobile-h4-tableheader-font;
     line-height: $mobile-h4-tableheader-lineh;
-    font-weight: 400;
+    font-weight: 600;
 }
 @mixin mobile-large-font{
     font-size: $mobile-p1-bodylarge-font;
