--- a/client/src/pages/AddInventory/AddInventory.scss
+++ b/client/src/pages/AddInventory/AddInventory.scss
@@ -1,3 +1,105 @@
 @import '../../Styles/partials/variables';
 @import '../../Styles/partials/typography';
 @import '../../Styles/partials/mixins';
+
+.inventories {
+    margin: 1rem;
+    position: relative;
+    top: -4.5rem;
+    background-color: $light-grey;
+    @include tablet {
+        margin: 2rem;
+        // top: -5.75rem;
+    }
+    @include desktop {
+        margin: 2rem 8.125rem 2rem 8.125rem;
+    }
+    &__container {
+        margin: 1rem;
+        display: flex;
+        flex-direction: column;
+    }
+    &__title {
+        color: $instock-black;
+        @include mobile-h1-pageheader;
+        display: flex;
+        align-items: center;
+    }
+    &__search-button { 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        @include tablet {
+            flex-direction: row;
+        }
+    }
+    &__buttonbox {
+        border: none;
+        border-radius: 20px;
+        padding: 0.5rem;
+        width: 100%;
+        margin: 1rem;
+        background-color: $instock-indigo;
+        color: $white;
+        &:hover {
+            background-color: $instock-black;
+        }
+        @include tablet {
+            width: 8rem;
+            margin-right: 0;
+        }
+    }
+    &__inventory-search-button {
+        @include tablet {
+            display: flex;
+            justify-content: space-between;
+            
+        }
+    }
+}
+.inventory { 
+    &__itemName { 
+        color: $instock-indigo;
+        @include mobile-h3-labels-links-btns;
+        // width: 3.4rem;
+        height: 1.25rem;
+        display: flex;
+
+        &--arrow { 
+            display: flex;
+        }
+        &arrowimg { 
+            width: 1rem;
+        }
+    }
+    &__subtitle { 
+        color: $slate;
+        margin-top: 1rem; 
+        margin-bottom: .25rem;
+        @include mobile-h4-table-header; 
+        text-transform: uppercase;
+        font-style: normal;
+    }
+    &__p2 {
+        color: $instock-black;
+        @include mobile-small-font;
+    }
+    &__actions--title {
+        display: none;
+    }
+    &__actions {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        &:hover {
+            cursor: pointer;
+        }
+    }
+    &__divcontainer {
+        display: flex;
+        justify-content: space-between;
+        @include tablet {
+            flex-direction: row;
+        }
+    }
+}
