--- a/client/src/components/WarehouseListItem/WarehouseListItem.scss
+++ b/client/src/components/WarehouseListItem/WarehouseListItem.scss
@@ -5,19 +5,34 @@
     border-top: 2px solid $cloud;
     height: 12.25rem;
 
+    @include tablet {
+        display: flex;
+        align-items: center;
+        height: 4.75rem;
+    }
+
     p {
-        @include mobile-large-font
+        @include mobile-medium-font
     }
    
     &__container {
         display: flex;
         max-width: 100%;
         margin: 1rem 1.5rem;
+
+        @include tablet {
+            margin: auto 2rem;
+            width: 100%;
+        }
     }
 
     &__column {
         width: 50%;
         margin-bottom: 0;
+
+        @include tablet {
+            display: flex;
+        }
     }
 
     &__category-container {
@@ -27,7 +42,11 @@
     }
 
     &__category {
-        @include mobile-h3-labels-links-btns
+        @include mobile-h3-labels-links-btns;
+
+        @include tablet {
+            display: none;
+        }
     }
 
     &__category--actions {
@@ -38,10 +57,22 @@
         margin: 1rem;
         display: flex;
         justify-content: space-between;
+
+        @include tablet {
+            padding-right: 1rem;
+        }
+    }
+
+    &__icon {
+        padding-left: 1.5rem;
     }
 
     &__link {
         color: $instock-indigo;
         display: flex;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
