--- a/client/src/components/WarehousesList/WarehousesList.scss
+++ b/client/src/components/WarehousesList/WarehousesList.scss
@@ -5,7 +5,45 @@
     &__container {
         display: flex;
         flex-direction: column;
-        margin: 0;
-        padding: 0;
+
+        @include tablet {
+            width: 100%;
+        }
+    }
+
+    &__categories {
+        display: none;
+
+        @include tablet {
+            @include desktop-h3-labels-links-btns;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background-color: $light-grey;
+            height: 2.5rem;
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
+    }
+
+    &__category {
+        @include tablet {
+            //width: 100%;
+        }
+    }
+
+    &__category-container {
+        @include tablet {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            width: 100%
+        } 
+    }
+
+    &__category--actions {
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
     }
 }
