--- a/client/src/pages/Warehouse/Warehouse.scss
+++ b/client/src/pages/Warehouse/Warehouse.scss
@@ -1,22 +1,55 @@
 @use '../../Styles/partials/mixins' as *;
 
 .warehouses {
-    position: absolute;
-    top: 9.5rem;
-    width: 100%;
+    position: relative;
+    top: -3rem;
+    width: 98%;
     display: flex;
     flex-direction: column;
-    margin: auto 1rem;
+    margin: auto;
     border: 1px solid $cloud;
     background-color: $white;
 
+    @include tablet {
+        top: -6rem;
+        max-width: 90%;
+    }
+
+    @include desktop {
+        max-width: 63.75rem;
+    }
+
     &__header {
         margin: 1rem;
+
+        @include tablet {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            height: 5.875rem;
+        }
+       
     }
     
     &__title {
         @include mobile-h1-pageheader;
         margin-bottom: 1rem;
+
+        @include tablet {
+            margin: 0;
+        }
+    }
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+
+        @include tablet {
+            flex-direction: row;
+            align-items: center;
+        }
+      
     }
 
     &__button {
@@ -25,6 +58,19 @@
         display: flex;
         margin-top: 1rem;
         margin-bottom: 2rem;
+
+        @include tablet {
+            margin: 0;
+            margin-left: 1rem;
+            width: 11.5rem;
+        }
+    }
+
+    &__search {
+        @include tablet {
+            margin: 0;
+            width: 11.5rem;
+        }
     }
 
 
