--- a/client/src/pages/EditInventory/EditInventory.scss
+++ b/client/src/pages/EditInventory/EditInventory.scss
@@ -1,4 +1,4 @@
-
+  
 @import "../../Styles/partials/mixins";
 @import "../../Styles/partials/variables";
 @import "../../Styles//partials/typography";
@@ -10,7 +10,7 @@ body {
   background-color: $light-grey;
 }
 
-.edit-inventory {
+.add-inventory {
   @include resets;
   display: flex;
   flex-direction: column;
@@ -80,30 +80,36 @@ body {
     font-weight: 600;
   }
   &__item-input{
-    width:18.4375rem;
+    width:17.4375rem;
     height: 2.25rem;
     border-radius: 20px;
     border: 1px solid #BDC5D5;
     margin-top: 0.25rem;
     margin-bottom: 1rem;
+    padding-left:1rem;
     @include desktop{
-        width:26.8rem;
-    }
+      width:26.8rem;
+  }
   }
   &__description-name{
     font-size: 0.8125rem;
     font-weight: 600;
   }
   &__description-input{
-    width:18.4375rem;
+    width:17.4375rem;
     height: 7.5rem;
     border-radius: 20px;
     border: 1px solid #BDC5D5;
     margin-top: 0.25rem;
     margin-bottom: 1rem;
+    padding-top:0.5rem;
+    padding-left:1rem;
+    font-family:Titillium Web;
+    color: #5C667E;
+    resize: none;
     @include desktop{
-        width:26.8rem;
-    }
+      width:26.8rem;
+  }
   }
   &__category-name{
     font-size: 0.8125rem;
@@ -113,14 +119,16 @@ body {
     background-image: url('http://localhost:8080/Assets/Icons/arrow_drop_down-24px.svg');
     background-repeat: no-repeat;
     background-position: top 50% right 5%;
-    width:18.4375rem;
+    width:17.4375rem;
     height: 2.25rem;
     border-radius: 20px;
     border: 1px solid #BDC5D5;
     margin-top: 0.25rem;
     margin-bottom: 1rem;
+    padding-left:1rem;
+    appearance: none;
     @include desktop{
-        width:26.8rem;
+      width:26.8rem;
     }
   }
 }
@@ -150,16 +158,22 @@ body {
     background-image: url('http://localhost:8080/Assets/Icons/arrow_drop_down-24px.svg');
     background-repeat: no-repeat;
     background-position: top 50% right 5%;
-    width:18.4375rem;
+    width:17.4375rem;
     height: 2.25rem;
     border-radius: 20px;
     border: 1px solid #BDC5D5;
     margin-top: 0.25rem;
     margin-bottom: 1rem;
+    padding-left:1rem;
+    appearance: none;
     @include desktop{
-        width:26.8rem;
+      width:26.8rem;
     }
-  }
+   }
+   &__choice{
+     padding-left: 1rem;
+     color: #BDC5D5;
+   }
 }
 
 .button{
