--- a/client/src/Styles/partials/_mixins.scss
+++ b/client/src/Styles/partials/_mixins.scss
@@ -52,8 +52,8 @@
     font-weight: 600;
 }
 @mixin mobile-h3-labels-links-btns{
-    font-size: $m-h3-lablinkbtns-font;
-    line-height: $m-h3-lablinkbtns-lineh;
+    font-size: $mobile-h3-lablinkbtns-font;
+    line-height: $mobile-h3-lablinkbtns-lineh;
     font-weight: 600;
 }
 @mixin mobile-h4-table-header{
